[project]
name = "actup"
version = "0.1.0"
description = "Analyzes GitHub Action usage in documentation and suggests updates."
authors = [{ name = "Padraic Slattery", email = "pgoslatara@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=0.9.0",
    "GitPython>=3.1.0",
    "httpx>=0.25.0",
    "ollama>=0.6.1",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "requests>=2.32.5",
    "retry>=0.9.2",
    "rich>=13.0.0",
    "tqdm>=4.67.1",
]

[project.scripts]
actup = "actup.cli:app"

[project.optional-dependencies]
dev = [
    "duckcli>=0.2.1",
    "ipykernel>=7.1.0",
    "prek>=0.2.25",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.1.0",
    "ty>=0.0.1",
    "yamlfix>=1.19.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104"]

[tool.uv]
package=true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --no-cov-on-fail"

[tool.yamlfix]
explicit_start=false
section_whitelines=1
whitelines=1
